# paddle-catalog-sync-SandtoProd

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  sync_catalog.py
examples/: webhook-map.example.json
tests/: test_simulation.py
